# coffee_image

./: .gitignore  Cargo.toml  Makefile  README.md
.resultImages/: ZSJ~Nxjq.txt
examplesImages/: test.avif
src/: components.rs  main.rs  select_mode.rs  text_viewer_.rs
src/coffee_image/: coffee_image_io.rs  error.rs  mod.rs  rng.rs  save_format.rs
src/coffee_image/convert/: image_wrap.rs  mod.rs
src/coffee_image/io/: coffee_image_io.rs  dialog.rs  mod.rs  text.rs
src/coffee_image/string_art/: ascii.rs
tests/: image_test.rs
