[package]
name = "coffee_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.10.0", features = ["debug","image"]}
image = "0.24.7"
rfd = "0.12.1"
tokio = {version = "1.33.0",features = ["fs"]}
